syntax = "proto3";
package service;
import "github.com/ronaksoft/rony/options.proto";
option go_package = "github.com/ronaksoft/dclock/service";

service Clock {
    option (rony_cobra_cmd) = true;
    rpc HookSet (HookSetRequest) returns (HookSetResponse);
    rpc HookDelete (HookDeleteRequest) returns (HookDeleteResponse);
}

message HookSetRequest {
    bytes UniqueID = 1;
    int64 Timestamp = 2; // UTC unix epoch time
    bytes HookUrl = 3;
    bytes HookJsonData = 4;
}

message HookSetResponse {
    bool Successful = 1;
}

message HookDeleteRequest {
    bytes UniqueID = 1;
}

message HookDeleteResponse {
    bool Successful = 1;
}